--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 git+https://github.com/subinps/pyrogram@inline-m
+pyrogram>=2.0.30
 tgcrypto
 pymongo[srv]==3.12.3
 motor==2.5.1
@@ -7,3 +8,7 @@ umongo==3.0.1
 requests
 bs4
 imdbpy==2021.4.18
+heroku3
+pynewtonmath
+pytz
+aiohttp
